Fix image stretch

--- a/liveblog/static/liveblog/css/main.css
+++ b/liveblog/static/liveblog/css/main.css
@@ -265,3 +265,7 @@ footer {
 }
 
 /** ------ */
+
+.block-image img {
+    height: auto;
+}
